creusot/tests/should_fail/impure_functions.stderr
error: called program function `std::vec::Vec::<T, A>::len` in logic context
 --> impure_functions.rs:6:19
  |
6 |     pearlite! { v.len()@ }
  |                   ^^^

error: called logic function `x` in program context
  --> impure_functions.rs:10:13
   |
10 |     let _ = x(&Vec::<()>::new());
   |             ^

error: aborting due to 2 previous errors

